<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.chameleon-vision.main</groupId>
    <artifactId>chameleon-vision</artifactId>
    <version>2.1-RELEASE</version>
    <build>
        <plugins>
            <!--setup for java jdk 12-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>12</source>
                    <target>12</target>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.chameleonvision.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <wpilib.version>2020.1.2</wpilib.version>
        <opencv.version>3.4.7-2</opencv.version>
    </properties>
    <repositories>
        <repository>
            <id>WPI</id>
            <name>WPILib Artifactory Server-releases</name>
            <url>https://frcmaven.wpi.edu:443/artifactory/release</url>
        </repository>
    </repositories>
    <dependencies>
        <!--javalin micro webservices framework-->
        <dependency>
            <groupId>io.javalin</groupId>
            <artifactId>javalin</artifactId>
            <version>3.4.1</version>
        </dependency>

        <!--org.json from saving and loading data-->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20190722</version>
        </dependency>

        <!--slf4j for javalin -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>1.7.26</version>
        </dependency>

        <!--apache common classes libs-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.msgpack</groupId>
            <artifactId>msgpack-core</artifactId>
            <version>0.8.18</version>
        </dependency>
        <dependency>
            <groupId>org.msgpack</groupId>
            <artifactId>jackson-dataformat-msgpack</artifactId>
            <version>0.8.18</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.10.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.10.1</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.10.1</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.5.2</version>
        </dependency>

        <!-- supported platforms for wpilib JNI classifiers
            linuxaarch64bionic
            linuxraspbian
            linuxx86-64
            osxx86-64
            windowsx86-64
        -->
        <!--frc cscore java libs-->
        <dependency>
            <groupId>edu.wpi.first.cscore</groupId>
            <artifactId>cscore-java</artifactId>
            <version>${wpilib.version}</version>
        </dependency>
        <!--frc cscore interface libs-->
        <dependency>
            <groupId>edu.wpi.first.cscore</groupId>
            <artifactId>cscore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>linuxaarch64bionic</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.cscore</groupId>
            <artifactId>cscore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>linuxraspbian</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.cscore</groupId>
            <artifactId>cscore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>linuxx86-64</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.cscore</groupId>
            <artifactId>cscore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>osxx86-64</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.cscore</groupId>
            <artifactId>cscore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>windowsx86-64</classifier>
        </dependency>

        <!--frc camera server libs-->
        <dependency>
            <groupId>edu.wpi.first.cameraserver</groupId>
            <artifactId>cameraserver-java</artifactId>
            <version>${wpilib.version}</version>
        </dependency>

        <!--frc network table java libs-->
        <dependency>
            <groupId>edu.wpi.first.ntcore</groupId>
            <artifactId>ntcore-java</artifactId>
            <version>${wpilib.version}</version>
        </dependency>

        <!--frc network tables interface libs-->
        <dependency>
            <groupId>edu.wpi.first.ntcore</groupId>
            <artifactId>ntcore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>osxx86-64</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.ntcore</groupId>
            <artifactId>ntcore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>linuxraspbian</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.ntcore</groupId>
            <artifactId>ntcore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>linuxx86-64</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.ntcore</groupId>
            <artifactId>ntcore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>linuxaarch64bionic</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.ntcore</groupId>
            <artifactId>ntcore-jni</artifactId>
            <version>${wpilib.version}</version>
            <classifier>windowsx86-64</classifier>
        </dependency>

        <!--frc java libs-->
        <dependency>
            <groupId>edu.wpi.first.wpiutil</groupId>
            <artifactId>wpiutil-java</artifactId>
            <version>${wpilib.version}</version>
        </dependency>

        <!-- WPI OpenCV for all supported platforms -->
        <dependency>
            <groupId>edu.wpi.first.thirdparty.frc2020.opencv</groupId>
            <artifactId>opencv-java</artifactId>
            <version>${opencv.version}</version>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.thirdparty.frc2020.opencv</groupId>
            <artifactId>opencv-jni</artifactId>
            <version>${opencv.version}</version>
            <classifier>linuxaarch64bionic</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.thirdparty.frc2020.opencv</groupId>
            <artifactId>opencv-jni</artifactId>
            <version>${opencv.version}</version>
            <classifier>linuxraspbian</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.thirdparty.frc2020.opencv</groupId>
            <artifactId>opencv-jni</artifactId>
            <version>${opencv.version}</version>
            <classifier>linuxx86-64</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.thirdparty.frc2020.opencv</groupId>
            <artifactId>opencv-jni</artifactId>
            <version>${opencv.version}</version>
            <classifier>osxx86-64</classifier>
        </dependency>
        <dependency>
            <groupId>edu.wpi.first.thirdparty.frc2020.opencv</groupId>
            <artifactId>opencv-jni</artifactId>
            <version>${opencv.version}</version>
            <classifier>windowsx86-64</classifier>
        </dependency>
    </dependencies>
</project>
